sudah mengedit 2 file

--- a/belajarhtml.html
+++ b/belajarhtml.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Halaman Artak</title>
+    <title>Halaman bukan Artak</title>
 
     <body>
         <h1> Ini Heading Banget Loh</h1>
